--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ hyper-util = { version = "0.1.17", features = ["full"] }
 http-body-util = "0.1.3"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
+serde_json = "1.0.145"
