--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "lodelix"
 version = "0.1.0"
 edition = "2024"
 
+[profile.release]
+strip = true
+lto = true
+panic = 'abort'
+
 [dependencies]
 tokio = { version = "1.47.1", features = ["full"] }
 hyper = { version = "1.7.0", features = ["full"] }
