--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ http-body-util = "0.1.3"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 serde_json = "1.0.145"
+serde = { version = "1.0.228", features = ["derive"] }
