--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 serde_json = "1.0.145"
 serde = { version = "1.0.228", features = ["derive"] }
+clap = { version = "4.5.48", features = ["derive"] }
