--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,9 @@ tracing-subscriber = "0.3.20"
 serde_json = "1.0.145"
 serde = { version = "1.0.228", features = ["derive"] }
 clap = { version = "4.5.48", features = ["derive"] }
+tonic = "0.14.2"
+prost = "0.14.1"
+tonic-prost = "0.14.2"
+
+[build-dependencies]
+tonic-prost-build = "0.14.2"
