Add gRPC feature support and refactor route and config structs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "lodelix"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+grpc = []
+
 [profile.release]
 strip = true
 lto = true
